# mesh-agent

./: CHANGELOG.md  configure.ac
config/: TR181-MeshAgent.xml
scripts/: add_cron_entries.sh  dscpinherit.sh  led_control_script.sh  rdkbHCMRecordingMonitor.sh  run_channel_keepout.sh  xmesh_diagnostic
source/: Makefile.am
source/MeshAgentCore/: Makefile.am
source/MeshAgentDiagnostics/: Makefile.am  xmesh_diag.h  xmesh_diag_apis.c  xmesh_diag_main.c
source/MeshAgentSsp/: Makefile.am  cosa_apis_util.c  cosa_apis_util.h  cosa_mesh_apis.c  cosa_mesh_parodus.c  cosa_mesh_parodus.h  cosa_meshagent_dml.c  cosa_meshagent_dml.h  cosa_meshagent_internal.c  cosa_meshagent_internal.h  cosa_webconfig_api.c  cosa_webconfig_api.h  ethpod_error_det.c  helpers.c  helpers.h  keepout_json_helpers.c  mesh_client_table.c  mesh_rbus.c  mesh_rbus.h  plugin_main.c  plugin_main.h  ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
source/clientTest/: Makefile.am
source/include/: meshagent.h  meshsync_msgs.h
source/test/: Makefile.am  MeshAgentTest.cpp  MockUtils.cpp  MockUtils.h
systemd_units/: greinheritance.service  meshAgent.path  meshAgent.service  meshwifi.service
